--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"dev": "concurrently \"nodemon src/server/index.js\" \"react-scripts start\"",
+		"dev": "concurrently \"nodemon server/index.js\" \"react-scripts start\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
