--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
+		"@types/react-loader-spinner": "^3.1.0",
 		"@types/react-redux": "^7.1.9",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/redux-logger": "^3.0.8",
+		"@types/redux-persist": "^4.3.1",
 		"@types/styled-components": "^5.1.3",
 		"axios": "^0.20.0",
 		"concurrently": "^5.3.0",
@@ -23,12 +25,14 @@
 		"express": "^4.17.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-loader-spinner": "^3.1.14",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-logger": "^3.0.6",
+		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.0",
 		"ts-node": "^9.0.0",
@@ -36,7 +40,6 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"dev": "concurrently \"nodemon server/index.js\" \"react-scripts start\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
