--- a/package.json
+++ b/package.json
@@ -1,66 +1,68 @@
 {
-	"name": "kids-quiz-app",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.3.2",
-		"@testing-library/user-event": "^7.1.2",
-		"@types/axios": "^0.14.0",
-		"@types/cors": "^2.8.7",
-		"@types/express": "^4.17.8",
-		"@types/jest": "^24.0.0",
-		"@types/node": "^12.0.0",
-		"@types/react": "^16.9.0",
-		"@types/react-dom": "^16.9.0",
-		"@types/react-loader-spinner": "^3.1.0",
-		"@types/react-redux": "^7.1.9",
-		"@types/react-router-dom": "^5.1.5",
-		"@types/redux-logger": "^3.0.8",
-		"@types/redux-persist": "^4.3.1",
-		"@types/styled-components": "^5.1.3",
-		"axios": "^0.20.0",
-		"concurrently": "^5.3.0",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-loader-spinner": "^3.1.14",
-		"react-redux": "^7.2.1",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3",
-		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-logger": "^3.0.6",
-		"redux-persist": "^6.0.0",
-		"redux-thunk": "^2.3.0",
-		"styled-components": "^5.2.0",
-		"ts-node": "^9.0.0",
-		"typescript": "~3.7.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"server": "nodemon server.js"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.4"
-	}
+  "name": "kids-quiz-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-persist": "^4.3.1",
+    "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~3.7.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server": "nodemon server.js",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,scss}'"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1"
+  }
 }
