--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"trailingComma": "es5",
-	"semi": true,
-	"singleQuote": true,
-	"arrowParens": "avoid"
+  "trailingComma": "es5",
+  "semi": false,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "jsxSingleQuote": true
 }
