--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js",
+    "server": "nodemon server/index.js",
+    "dev": "concurrently \"nodemon server/index.js\" \"react-scripts start\"",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,scss}'"
   },
   "eslintConfig": {
