--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.5",
     "@types/axios": "^0.14.0",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@types/jest": "^26.0.14",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "^3.1.0",
@@ -21,8 +18,7 @@
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "jest": "^24.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
@@ -35,13 +31,14 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.7.2"
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"nodemon server/index.js\" \"react-scripts start\"",
@@ -63,7 +60,6 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
     "prettier": "^2.1.1"
   }
 }
