--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
     "jest": "^24.9.0",
+    "postcss": "7.0.32",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
