🎨 refactoring backend code and working with db

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon index.js",
     "migrate": "cross-env NODE_ENV=development knex migrate:latest",
     "rollback": "cross-env NODE_ENV=development knex migrate:rollback",
+    "migrate:prod": "cross-env NODE_ENV=production knex migrate:latest",
+    "rollback:prod": "cross-env NODE_ENV=production knex migrate:rollback",
     "seed": "cross-env NODE_ENV=development knex seed:run"
   },
   "keywords": [],
